# modellingSimulation

./: .gitignore  4galaxies.diff  CMakeLists.txt  Dockerfile  Makefile  Pipfile  README.md  clean.bat  copy-data-to-local.bat  copy-data-to-local.sh  docker-compose-w.yaml  docker-compose.yaml  init.bat  init.sh  jobscript  jobscript-stefan  make.bat  makefile  plotpoints.py  requirements.txt  setup.sh  wmakefile
accuracy/: accuracy.py
dependencies/matplotplusplus-1.0.1-Linux/lib/cmake/Matplot++/: Matplot++Targets.cmake
plotting/: plot.py  plotpoints.py
src/: CMakeLists.txt  hello.cpp  main.cpp  main.py
src/models/: galaxy.cpp  galaxy.h  simulation.cpp  simulation.h  star.cpp  star.h
src/octree/: octree.cpp  octree.h
src/simulation/: simulation.cpp  simulation.h
src/utils/: argparse.h  constants.h  coordinate.cpp  coordinate.h
utils/volumes/: add-data-from-1-container.bat  add-data-from-1-container.sh  add-data-from-all-containers.bat  add-data-from-all-containers.sh  create-volumes.bat  create-volumes.sh
video/: video.py
~Saved_Results/: README.md
